--- a/NDSB/NDSB.csproj
+++ b/NDSB/NDSB.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="CrowdFlowerFormatting.cs" />
     <Compile Include="FileTransform.cs" />
+    <Compile Include="SparseDistances.cs" />
     <Compile Include="SparseKNN.cs" />
     <Compile Include="TFIDF.cs" />
     <Compile Include="Form1.cs">
