--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,4 @@ NDSB/obj/x86/Debug/NDSB.Properties.Resources.resources
 NDSB/obj/x86/Debug/DesignTimeResolveAssemblyReferences.cache
 *.cache
 *.cache
+*.cache
