--- a/NDSB/NDSB.csproj
+++ b/NDSB/NDSB.csproj
@@ -50,12 +50,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClassificationUtils\DownSample.cs" />
+    <Compile Include="SparseSpaces\SparseHilbert.cs" />
     <Compile Include="SparseMethods\SparseKNN.cs" />
+    <Compile Include="SparseSpaces\SparseLinearSpace.cs" />
+    <Compile Include="SparseMethods\SparsePegasos.cs" />
     <Compile Include="TextUtils\DSCdiscountUtils.cs" />
     <Compile Include="FileUtils\CSRHelper.cs" />
-    <Compile Include="SparseMethods\SparseDistances.cs" />
+    <Compile Include="SparseSpaces\SparseMetric.cs" />
     <Compile Include="SparseMethods\SparseKNNII.cs" />
-    <Compile Include="SparseMethods\SparseNormalizations.cs" />
     <Compile Include="TextUtils\TFIDF.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
