--- a/NDSB/NDSB.csproj
+++ b/NDSB/NDSB.csproj
@@ -50,10 +50,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClassificationUtils\DownSample.cs" />
+    <Compile Include="SparseMethods\SparseMulticlassPerceptron.cs" />
+    <Compile Include="SparseMethods\SparseRocchio.cs" />
     <Compile Include="SparseSpaces\SparseHilbert.cs" />
     <Compile Include="SparseMethods\SparseKNN.cs" />
     <Compile Include="SparseSpaces\SparseVectorial.cs" />
-    <Compile Include="SparseMethods\SparsePegasos.cs" />
+    <Compile Include="SparseMethods\SparsePerceptron.cs" />
     <Compile Include="TextUtils\DSCdiscountUtils.cs" />
     <Compile Include="FileUtils\CSRHelper.cs" />
     <Compile Include="SparseSpaces\SparseMetric.cs" />
