--- a/NDSB/NDSB.csproj
+++ b/NDSB/NDSB.csproj
@@ -50,16 +50,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClassificationUtils\DownSample.cs" />
-    <Compile Include="SparseMethods\SparseMulticlassPerceptron.cs" />
-    <Compile Include="SparseMethods\SparseRocchio.cs" />
-    <Compile Include="SparseSpaces\SparseHilbert.cs" />
-    <Compile Include="SparseMethods\SparseKNN.cs" />
-    <Compile Include="SparseSpaces\SparseVectorial.cs" />
-    <Compile Include="SparseMethods\SparsePerceptron.cs" />
+    <Compile Include="SparseMethods\MulticlassPerceptron.cs" />
+    <Compile Include="SparseMethods\NearestCentroid.cs" />
+    <Compile Include="SparseSpaces\HilbertSpace.cs" />
+    <Compile Include="SparseMethods\KNN.cs" />
+    <Compile Include="SparseSpaces\LinearSpace.cs" />
+    <Compile Include="SparseMethods\Perceptron.cs" />
     <Compile Include="TextUtils\DSCdiscountUtils.cs" />
     <Compile Include="FileUtils\CSRHelper.cs" />
-    <Compile Include="SparseSpaces\SparseMetric.cs" />
-    <Compile Include="SparseMethods\SparseKNNII.cs" />
+    <Compile Include="SparseSpaces\MetricSpace.cs" />
+    <Compile Include="SparseMethods\KNNII.cs" />
     <Compile Include="TextUtils\TFIDF.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
