--- a/NDSB/NDSB.csproj
+++ b/NDSB/NDSB.csproj
@@ -51,11 +51,16 @@
   <ItemGroup>
     <Compile Include="ClassificationUtils\DownSample.cs" />
     <Compile Include="FileUtils\CSVHelper.cs" />
+    <Compile Include="Kernels\IKernel.cs" />
     <Compile Include="MLHelper.cs" />
+    <Compile Include="SparseMappings\IdentitySparse.cs" />
+    <Compile Include="SparseMappings\IMapping.cs" />
+    <Compile Include="SparseMappings\InteractionSparse.cs" />
     <Compile Include="SparseMethods\MulticlassPerceptron.cs" />
     <Compile Include="SparseMethods\NearestCentroid.cs" />
     <Compile Include="SparseSpaces\HilbertSpace.cs" />
     <Compile Include="SparseMethods\KNN.cs" />
+    <Compile Include="Kernels\PolynomialKernel.cs" />
     <Compile Include="SparseSpaces\LinearSpace.cs" />
     <Compile Include="SparseMethods\Perceptron.cs" />
     <Compile Include="TextUtils\DSCdiscountUtils.cs" />
