--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ NDSB/obj/x86/Debug/DesignTimeResolveAssemblyReferences.cache
 *.suo
 *.manifest
 NDSB/obj/x86/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+NDSB.suo
