--- a/NDSB/NDSB.csproj
+++ b/NDSB/NDSB.csproj
@@ -73,18 +73,20 @@
     <Compile Include="ClassificationUtils\DownSample.cs" />
     <Compile Include="FileUtils\CSVHelper.cs" />
     <Compile Include="FileUtils\LIBSVMHelper.cs" />
+    <Compile Include="Models\IModelClassification.cs" />
     <Compile Include="MLHelper.cs" />
+    <Compile Include="Models\ClassificationHelper.cs" />
     <Compile Include="SparseMappings\Interactions.cs" />
     <Compile Include="SparseMappings\Identity.cs" />
     <Compile Include="SparseMappings\IMapping.cs" />
     <Compile Include="SparseMappings\PureInteractions.cs" />
-    <Compile Include="SparseMethods\NearestCentroid.cs" />
+    <Compile Include="Models\SparseModels\NearestCentroid.cs" />
     <Compile Include="SparseSpaces\HilbertSpace.cs" />
     <Compile Include="SparseSpaces\LinearSpace.cs" />
     <Compile Include="TextUtils\DSCdiscountUtils.cs" />
     <Compile Include="FileUtils\CSRHelper.cs" />
     <Compile Include="SparseSpaces\MetricSpace.cs" />
-    <Compile Include="SparseMethods\KNNII.cs" />
+    <Compile Include="Models\SparseModels\KNNII.cs" />
     <Compile Include="TextUtils\TFIDF.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
