--- a/NDSB/NDSB.csproj
+++ b/NDSB/NDSB.csproj
@@ -70,12 +70,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FileUtils\Shuffler.cs" />
-    <Compile Include="FileUtils\Splitter.cs" />
+    <Compile Include="FileUtils\FShuffler.cs" />
+    <Compile Include="FileUtils\FSplitter.cs" />
     <Compile Include="Models\DirtyHelpers.cs" />
+    <Compile Include="Models\SparseModels\SparseClassificationHelper.cs" />
     <Compile Include="PreProcessing\DownSample.cs" />
     <Compile Include="FileUtils\CSVHelper.cs" />
-    <Compile Include="FileUtils\LIBSVMHelper.cs" />
     <Compile Include="Models\IModelClassification.cs" />
     <Compile Include="Models\ClassificationHelper.cs" />
     <Compile Include="SparseMappings\Interactions.cs" />
@@ -89,7 +89,7 @@
     <Compile Include="SparseSpaces\LinearSpace.cs" />
     <Compile Include="TextUtils\DSCdiscountUtils.cs" />
     <Compile Include="FileUtils\CSRHelper.cs" />
-    <Compile Include="SparseSpaces\MetricSpace.cs" />
+    <Compile Include="SparseSpaces\Distances.cs" />
     <Compile Include="Models\SparseModels\KNNII.cs" />
     <Compile Include="TextUtils\TFIDF.cs" />
     <Compile Include="Form1.cs">
