--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ NDSB/obj/x86/Debug/DesignTimeResolveAssemblyReferences.cache
 NDSB/obj/x86/Debug/DesignTimeResolveAssemblyReferencesInput.cache
 NDSB.suo
 *.suo
+NDSB.suo
